# Python-OCR

./: .dockerignore  .env.example  .gitignore  DOCUMENTATION_SUMMARY.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  ocr_engine.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/agents/: Beast Mode.agent.md
.github/instructions/: ocr-go.md  ocr.instructions.md
docs/: ARCHITECTURE.md  CLEAN_CODE_GUIDE.md  MACOS_SETUP.md
ocr-go/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod
ocr-go/cmd/server/: main.go
ocr-go/internal/handler/: batch.go  extract.go  handler.go  visualize.go
ocr-go/internal/middleware/: logger.go
ocr-go/internal/model/: result.go
ocr-go/internal/ocr/: engine.go  tesseract.go
ocr-go/web/static/css/: style.css
ocr-go/web/static/js/: app.js
ocr-go/web/templates/: base.html  index.html  results.html
src/ocr/: __init__.py  app.py  engine.py
tests/: __init__.py  conftest.py  test_engine.py
