[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-ocr"
version = "1.0.0"
description = "Fast OCR system for document recognition with PDF support (Tesseract/PaddleOCR)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Developer" }
]
keywords = ["ocr", "tesseract", "paddleocr", "document-recognition", "streamlit", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "streamlit==1.39.0",
    "pillow==10.4.0",
    "opencv-python-headless>=4.8.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "PyMuPDF>=1.23.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
paddle = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
"Homepage" = "https://github.com/username/python-ocr"
"Bug Tracker" = "https://github.com/username/python-ocr/issues"
"Documentation" = "https://github.com/username/python-ocr#readme"

[project.scripts]
ocr-app = "ocr.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ocr"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/ocr"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | outputs
    | uploads
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "outputs",
    "uploads",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
    ".venv",
]
